# CICDTests

./: .editorconfig  .gitignore  .rustc_info.json  Cargo.toml  rustfmt.toml
.github/: dependabot.yaml
.github/workflows/: publish.yaml  rust_ci.yaml  update_caches.yaml
cicd_ffi/: Cargo.toml  build.rs
cicd_ffi/src/: cicd_ffi.udl  lib.rs
cicd_tests/: Cargo.toml
cicd_tests/src/: create_schema.rs
