[package]
name = "cicd_ffi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "uniffi-bindgen"
path = "./src/uniffi-bindgen.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]
name = "cicd_ffi"

[dependencies]
cicd_tests = { path = "../cicd_tests" }
uniffi = { version = "0.24.1", features = ["cli"] }

[build-dependencies]
uniffi = { version = "0.24.1", features = ["build"] }
